/*
 * This file was generated by the Gradle 'init' task.
 *
 * This project uses @Incubating APIs which are subject to change.
 */

plugins {
    java
    `maven-publish`
    application
}

repositories {
    maven {
        url = uri("https://m2.chew.pro/snapshots/")
        content {
            includeGroup("pw.chew")
            includeModule("pw.chew.chewbotcca", "Chewbotcca")
        }
    }

    mavenCentral() {
        content {
            excludeGroup("pw.chew")
        }
    }
}

dependencies {
    implementation("net.dv8tion", "JDA", "5.0.0-alpha.13")
    implementation("pw.chew", "jda-chewtils", "2.0-SNAPSHOT")
    implementation("ch.qos.logback", "logback-classic", "1.2.10")
    implementation("com.squareup.okhttp3", "okhttp", "4.9.3")
    implementation("org.json", "json", "20211205")
    implementation("org.reflections", "reflections", "0.10.2")
    implementation("org.mapdb", "mapdb", "3.0.8")
    implementation("org.knowm.xchart", "xchart", "3.8.1")
    implementation("pw.chew.chewbotcca", "Chewbotcca", "2.0-SNAPSHOT") {
        isTransitive = false
    }
}

group = "pw.chew"
version = "2.0"
description = "ChanServ"
java.sourceCompatibility = JavaVersion.VERSION_17

publishing {
    publications.create<MavenPublication>("maven") {
        from(components["java"])
    }
}

tasks.withType<JavaCompile>() {
    options.encoding = "UTF-8"
}

application {
    mainClass.set("pw.chew.chanserv.ChanServ")
}
